--- a/src/themes/dspace/app/home-page/home-news/home-news.component.html
+++ b/src/themes/dspace/app/home-page/home-news/home-news.component.html
@@ -19,21 +19,23 @@
           handle.net and DataCite DOI
         </li>
       </ul>
-      <p>Join an international community of <a href="https://wiki.lyrasis.org/display/DSPACE/DSpace+Positioning" target="_blank">leading institutions using DSpace</a>.</p>
-      <p>The test user accounts below have their password set to the name of this
-        software in lowercase.</p>
+      <p><a href="https://tpgroupsl.com/companies/technology/" target="_blank">TpISENT</a> is a leading professional services company providing ICT consultancy, management consultancy, technology platforms, software development, User Experience Design in Sierra Leone with over 50 years combined experience .</p>
+      <p><a href="https://tpgroupsl.com/companies/technology/" target="_blank">TpISENT</a> is part of <a href="https://tpgroupsl.com/" target="_blank">TpGroup (SL) Limited.</a> A group of companies providing <a href="#">Information & Communication Technology</a>, <a href="http://tpestate.com">Sustainable Real Estate Development</a> and <a href="https://fambultik.com/">Heritage Tourism</a> products, services and solutions primarily in Sierra Leone & the United States of America</p>
+      <p>Below you will find a list of digital platforms powered by <a href="https://tpgroupsl.com/companies/technology/" target="_blank">TpISENT</a> technology and digital content</p>
       <ul>
-        <li>Demo Site Administrator = dspacedemo+admin&#64;gmail.com</li>
-        <li>Demo Community Administrator = dspacedemo+commadmin&#64;gmail.com</li>
-        <li>Demo Collection Administrator = dspacedemo+colladmin&#64;gmail.com</li>
-        <li>Demo Submitter = dspacedemo+submit&#64;gmail.com</li>
+        <li><a href="https://njala.edu.sl" target="_blank"></a></li>
+        <li><a href="https://app.njala.edu.sl" target="_blank"></a></li>
+        <li><a href="https://portal.njala.edu.sl" target="_blank"></a></li>
+        <li><a href="https://dspace.njala.edu.sl" target="_blank"></a></li>
+        <li><a href="https://tplearn.edu.sl/" target="_blank"></a></li>
+        <li><a href="https://electiondata.io" target="_blank"></a></li>
       </ul>
     </div>
   </div>
   <picture class="background-image">
-    <source type="image/webp" srcset="assets/dspace/images/banner.webp 2000w, assets/dspace/images/banner-half.webp 1200w, assets/dspace/images/banner-tall.webp 768w">
-    <source type="image/jpg" srcset="assets/dspace/images/banner.jpg 2000w, assets/dspace/images/banner-half.jpg 1200w, assets/dspace/images/banner-tall.jpg 768w">
-    <img alt="" [src]="'assets/dspace/images/banner.jpg'"/><!-- without the []="''" Firefox downloads both the fallback and the resolved image -->
+    <source type="image/webp" srcset="assets/dspace/images/banner-illustration-of-student-using-table-with-oer-at-home.webp 2000w, assets/dspace/images/banner-half-illustration-of-student-using-table-with-oer-at-home.webp 1200w, assets/dspace/images/banner-tall-illustration-of-student-using-table-with-oer-at-home.webp 768w">
+    <source type="image/jpg" srcset="assets/dspace/images/banner-illustration-of-student-using-table-with-oer-at-home.jpeg 2000w, assets/dspace/images/banner-half-illustration-of-student-using-table-with-oer-at-home.jpeg 1200w, assets/dspace/images/banner-tall-illustration-of-student-using-table-with-oer-at-home.jpeg 768w">
+    <img alt="" [src]="'assets/dspace/images/banner-illustration-of-student-using-table-with-oer-at-home.jpeg'"/><!-- without the []="''" Firefox downloads both the fallback and the resolved image -->
   </picture>
-  <small class="credits">Photo by <a href="https://www.pexels.com/@inspiredimages">&#64;inspiredimages</a></small>
+  <small class="credits">Illustration by <a href="https://tpgroupsl.com/companies/technology/">TpISENT Graphic Department</a></small>
 </div>
