--- a/src/themes/dspace/app/footer/footer.component.html
+++ b/src/themes/dspace/app/footer/footer.component.html
@@ -7,17 +7,17 @@
 
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-          <h5 class="text-uppercase">Footer Content</h5>
+          <h5 class="text-uppercase">Favorite Links</h5>
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a routerLink="./" class="">Lorem ipsum</a>
+              <a routerLink="https://tpgroupsl.com" class="">TpGroup (SL) Limited</a>
             </li>
             <li>
-              <a routerLink="./" class="">Ut facilisis</a>
+              <a routerLink="https://tpestate.com" class="">TpESTATE (SL) Limited</a>
             </li>
             <li>
-              <a routerLink="./" class="">Aenean sit</a>
+              <a routerLink="https://fambultik.com" class="">Fambul Tik Tours</a>
             </li>
           </ul>
         </div>
@@ -25,11 +25,14 @@
 
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-          <h5 class="text-uppercase">Footer Content</h5>
+          <h5 class="text-uppercase">TpLEARN</h5>
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a routerLink="./" class="">Suspendisse potenti</a>
+              <a routerLink="https://tplearn.edu.sl" class="">TpLEARN</a>
+            </li>
+             <li>
+              <a routerLink="https://electiondata.io" class="">Open Elections Platform</a>
             </li>
           </ul>
         </div>
@@ -37,12 +40,13 @@
 
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Footer Content</h5>
+          <h5 class="text-uppercase">TpGroup Address</h5>
 
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-            molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-            voluptatem veniam, est atque cumque eum delectus sint!
+            13 Hill Cot Road<br />
+Freetown, Sierra Leone.<br />
++232 76 617 550<br />
+info@tplearn.edu.sl<br />
           </p>
         </div>
         <!--Grid column-->
