--- a/src/themes/dspace/app/home-page/home-news/home-news.component.html
+++ b/src/themes/dspace/app/home-page/home-news/home-news.component.html
@@ -23,10 +23,10 @@
       <p><a href="https://tpgroupsl.com/companies/technology/" target="_blank">TpISENT</a> is part of <a href="https://tpgroupsl.com/" target="_blank">TpGroup (SL) Limited.</a> A group of companies providing <a href="#">Information & Communication Technology</a>, <a href="http://tpestate.com">Sustainable Real Estate Development</a> and <a href="https://fambultik.com/">Heritage Tourism</a> products, services and solutions primarily in Sierra Leone & the United States of America</p>
       <p>Below you will find a list of digital platforms powered by <a href="https://tpgroupsl.com/companies/technology/" target="_blank">TpISENT</a> technology and digital content</p>
       <ul>
-        <li><a href="https://njala.edu.sl" target="_blank">Njala University Main Website - njala.edu.sl</a></li>
-        <li><a href="https://app.njala.edu.sl" target="_blank">Njala University Admission Web App</a></li>
-        <li><a href="https://portal.njala.edu.sl" target="_blank">Njala University Online Portal</a></li>
-        <li><a href="https://dspace.njala.edu.sl" target="_blank">Njala University Research Repository</a></li>
+        <li><a href="#" target="_blank">Njala University Main Website - njala.edu.sl</a></li>
+        <li><a href="#" target="_blank">Njala University Admission Web App</a></li>
+        <li><a href="#" target="_blank">Njala University Online Portal</a></li>
+        <li><a href="#" target="_blank">Njala University Research Repository</a></li>
         <li><a href="https://tplearn.edu.sl/" target="_blank">TpLEARN by TpISENT</a></li>
         <li><a href="https://electiondata.io" target="_blank">Open Elections Data by TpISENT</a></li>
       </ul>
