--- a/src/themes/dspace/styles/_theme_sass_variable_overrides.scss
+++ b/src/themes/dspace/styles/_theme_sass_variable_overrides.scss
@@ -70,7 +70,7 @@ $yiq-contrasted-threshold: 170;
 
 $body-color: #4F4B4E;       // As Bootstrap $gray-800
 
-$link-color: #2A3C79;       // Blue green, as DSpace $info
+$link-color: #ff005f;       // Blue green, as DSpace $info
 $link-decoration: none;
 $link-hover-color: darken($link-color, 15%);
 $link-hover-decoration: underline;
@@ -83,8 +83,8 @@ $navbar-dark-color: #fff;
 
 /*** CUSTOM DSPACE VARIABLES ***/
 
-$ds-home-news-link-color: #2A3C79;
+$ds-home-news-link-color: #ff005f;
 $ds-header-navbar-border-bottom-color: #ff005f;
 
-$ds-breadcrumb-link-color: #2A3C79 !default;
+$ds-breadcrumb-link-color: #ff005f !default;
 $ds-breadcrumb-link-active-color: #4F4B4E !default;
