changing logo everywhere

--- a/src/app/item-page/simple/qa-event-notification/qa-event-notification.component.html
+++ b/src/app/item-page/simple/qa-event-notification/qa-event-notification.component.html
@@ -5,7 +5,7 @@
         <img class="source-logo"
              src="assets/images/qa-{{(source.id | dsSplit: ':')[0]}}-logo.png"
              alt="{{source.id}} logo"
-             onerror="this.src='assets/images/dspace-logo.svg'">
+             onerror="this.src='assets/images/tplearn-logo-black.png'">
       </div>
       <div class="w-100 d-flex justify-content-between">
         <div class="pl-4 align-self-center">
