--- a/src/app/my-dspace-page/my-dspace-qa-events-notifications/my-dspace-qa-events-notifications.component.html
+++ b/src/app/my-dspace-page/my-dspace-qa-events-notifications/my-dspace-qa-events-notifications.component.html
@@ -8,7 +8,7 @@
       <img
         class="source-logo"
         src="assets/images/qa-{{ source.id }}-logo.png"
-        onerror="this.src='assets/images/dspace-logo.svg'"
+        onerror="this.src='assets/images/tplearn-logo-black.png'"
         alt="{{ source.id }} logo"
       />
     </div>
