--- a/src/themes/dspace/app/home-page/home-news/home-news.component.html
+++ b/src/themes/dspace/app/home-page/home-news/home-news.component.html
@@ -3,33 +3,11 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="d-flex flex-wrap">
         <div>
-          <h1 class="display-3">Dspace 8 by TpISENT (SL) Limited</h1>
-          <p class="lead">DSpace is the world leading open source repository platform that enables
-            organisations to:</p>
+          <h1 class="display-3">Dspace@USL</h1>
+          <p class="lead">University of Sierra Leone Research Repository. The University of Sierra Leone (USL) a public university in Sierra Leone is currently made up of three constituent colleges/campuses</p>
         </div>
       </div>
-      <ul>
-        <li>easily ingest documents, audio, video, datasets and their corresponding Dublin Core
-          metadata
-        </li>
-        <li>open up this content to local and global audiences, thanks to the OAI-PMH interface and
-          Google Scholar optimizations
-        </li>
-        <li>issue permanent urls and trustworthy identifiers, including optional integrations with
-          handle.net and DataCite DOI
-        </li>
-      </ul>
-      <p><a href="https://tpgroupsl.com/companies/technology/" target="_blank">TpISENT</a> is a leading professional services company providing ICT consultancy, management consultancy, technology platforms, software development, User Experience Design in Sierra Leone with over 50 years combined experience .</p>
-      <p><a href="https://tpgroupsl.com/companies/technology/" target="_blank">TpISENT</a> is part of <a href="https://tpgroupsl.com/" target="_blank">TpGroup (SL) Limited.</a> A group of companies providing <a href="#">Information & Communication Technology</a>, <a href="http://tpestate.com">Sustainable Real Estate Development</a> and <a href="https://fambultik.com/">Heritage Tourism</a> products, services and solutions primarily in Sierra Leone & the United States of America</p>
-      <p>Below you will find a list of digital platforms powered by <a href="https://tpgroupsl.com/companies/technology/" target="_blank">TpISENT</a> technology and digital content</p>
-      <ul>
-        <li><a href="#" target="_blank">Njala University Main Website - njala.edu.sl</a></li>
-        <li><a href="#" target="_blank">Njala University Admission Web App</a></li>
-        <li><a href="#" target="_blank">Njala University Online Portal</a></li>
-        <li><a href="#" target="_blank">Njala University Research Repository</a></li>
-        <li><a href="https://tplearn.edu.sl/" target="_blank">TpLEARN by TpISENT</a></li>
-        <li><a href="https://electiondata.io" target="_blank">Open Elections Data by TpISENT</a></li>
-      </ul>
+      <p><a href="https://usl.edu.sl/fbc/" target="_blank">Fourah Bay College (FBC)</a></li>, the first college which specialises in the Arts, Humanities, Social Sciences, Law, Pure and Applied Sciences, Engineering and Architecture, was founded on the 18th of February 1827, by the Church Missionary Society. <a href="https://usl.edu.sl/ipam/" target="_blank">IPAM</a></li>, an institution which trains administrators and managers. It is currently the Business arm of USL.  The Third constituent campus is the <a href="https://usl.edu.sl/comahs/" target="_blank">College of Medicine and Allied Health Sciences (COMAHS)</a></li>. It trains doctors, pharmacists, nurses, laboratory scientists and other allied health professionals</p>
     </div>
   </div>
   <picture class="background-image">
@@ -37,5 +15,5 @@
     <source type="image/jpg" srcset="assets/dspace/images/banner-illustration-of-student-using-table-with-oer-at-home.jpeg 2000w, assets/dspace/images/banner-half-illustration-of-student-using-table-with-oer-at-home.jpeg 1200w, assets/dspace/images/banner-tall-illustration-of-student-using-table-with-oer-at-home.jpeg 768w">
     <img alt="" [src]="'assets/dspace/images/banner-illustration-of-student-using-table-with-oer-at-home.jpeg'"/><!-- without the []="''" Firefox downloads both the fallback and the resolved image -->
   </picture>
-  <small class="credits">Illustration by <a href="https://tpgroupsl.com/companies/technology/">TpISENT Graphic Department</a></small>
+  <small class="credits">Illustration by <a href="https://tpgroupsl.com/companies/technology/">TpISENT (SL) Limited</a></small>
 </div>
