--- a/src/themes/dspace/app/home-page/home-news/home-news.component.html
+++ b/src/themes/dspace/app/home-page/home-news/home-news.component.html
@@ -7,7 +7,7 @@
           <p class="lead">University of Sierra Leone Research Repository. The University of Sierra Leone (USL) a public university in Sierra Leone is currently made up of three constituent colleges/campuses</p>
         </div>
       </div>
-      <p><a href="https://usl.edu.sl/fbc/" target="_blank">Fourah Bay College (FBC)</a></li>, the first college which specialises in the Arts, Humanities, Social Sciences, Law, Pure and Applied Sciences, Engineering and Architecture, was founded on the 18th of February 1827, by the Church Missionary Society. <a href="https://usl.edu.sl/ipam/" target="_blank">IPAM</a></li>, an institution which trains administrators and managers. It is currently the Business arm of USL.  The Third constituent campus is the <a href="https://usl.edu.sl/comahs/" target="_blank">College of Medicine and Allied Health Sciences (COMAHS)</a></li>. It trains doctors, pharmacists, nurses, laboratory scientists and other allied health professionals</p>
+      <p><a href="https://usl.edu.sl/fbc/" target="_blank">Fourah Bay College (FBC)</a>, the first college which specialises in the Arts, Humanities, Social Sciences, Law, Pure and Applied Sciences, Engineering and Architecture, was founded on the 18th of February 1827, by the Church Missionary Society. <a href="https://usl.edu.sl/ipam/" target="_blank">IPAM</a>, an institution which trains administrators and managers. It is currently the Business arm of USL.  The Third constituent campus is the <a href="https://usl.edu.sl/comahs/" target="_blank">College of Medicine and Allied Health Sciences (COMAHS)</a>. It trains doctors, pharmacists, nurses, laboratory scientists and other allied health professionals</p>
     </div>
   </div>
   <picture class="background-image">
