--- a/src/themes/dspace/styles/_theme_css_variable_overrides.scss
+++ b/src/themes/dspace/styles/_theme_css_variable_overrides.scss
@@ -10,7 +10,7 @@
     --ds-header-logo-height: 50px;
     --ds-header-height: 90px;
   }
-
+  --ds-header-bg:rgba(0, 0, 0, 0.9);
   --ds-banner-text-background: rgba(0, 0, 0, 0.45);
   --ds-banner-background-gradient-width: 300px;
 
