--- a/src/themes/dspace/app/home-page/home-news/home-news.component.html
+++ b/src/themes/dspace/app/home-page/home-news/home-news.component.html
@@ -3,7 +3,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="d-flex flex-wrap">
         <div>
-          <h1 class="display-3">Dspace at University of Sierra Leone</h1>
+          <h1 class="display-3">Dspace at USL</h1>
           <p class="lead">University of Sierra Leone Research Repository. The University of Sierra Leone (USL) a public university in Sierra Leone is currently made up of three constituent colleges/campuses</p>
         </div>
       </div>
