--- a/src/themes/dspace/app/footer/footer.component.html
+++ b/src/themes/dspace/app/footer/footer.component.html
@@ -28,7 +28,7 @@
 		</aside><aside id="text-8" class="widget widget_text">			<div class="textwidget"><p><img decoding="async" class="" src="https://usl.edu.sl/ipam/wp-content/uploads/2024/05/NEW-IPAM-LOGO.png" alt="University of Sierra Leone Logo" width="168" height="116"></p>
 <p>A.J. Momoh Drive, Tower Hill, Freetown, Sierra Leone.</p>
 <p>Phone: +232 30 747108<br>
-Email: registry@usl.edu.sl</p>
+Email: registry&#64;usl.edu.sl</p>
 </div>
 		</aside>				</div>
 			</div>
