--- a/src/themes/dspace/app/footer/footer.component.html
+++ b/src/themes/dspace/app/footer/footer.component.html
@@ -8,23 +8,12 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
           <h5 class="text-uppercase">Navigation</h5>
-
           <ul class="list-unstyled mb-0">
-            <li>
-              <a routerLink="./" class="">USL Overview</a>
-            </li>
-            <li>
-              <a routerLink="./" class="">Our Values</a>
-            </li>
-            <li>
-              <a routerLink="./" class="">Governance</a>
-            </li>
-            <li>
-              <a routerLink="./" class="">Campus Locations</a>
-            </li>
-          </li>
-          <a routerLink="./" class="">Partners</a>
-        </li>
+            <li><a routerLink="./" class="">USL Overview</a></li>
+            <li><a routerLink="./" class="">Our Values</a></li>
+            <li> <a routerLink="./" class="">Governance</a></li>
+            <li><a routerLink="./" class="">Campus Locations</a></li>
+            <li><a routerLink="./" class="">Partners</a></li>
           </ul>
         </div>
         <!--Grid column-->
@@ -32,23 +21,12 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
           <h5 class="text-uppercase">Academics</h5>
-
           <ul class="list-unstyled mb-0">
-            <li>
-              <a routerLink="./" class="">Short Courses</a>
-            </li>
-            <li>
-              <a routerLink="./" class="">USL Prospectus</a>
-            </li>
-            <li>
-              <a routerLink="./" class="">Tuition &amp; Fees</a>
-            </li>
-            <li>
-              <a routerLink="./" class="">Scholarships</a>
-            </li>
-          </li>
-          <a routerLink="./" class="">Academic Calendar</a>
-        </li>
+            <li><a routerLink="./" class="">Short Courses</a></li>
+            <li><a routerLink="./" class="">USL Prospectus</a></li>
+            <li><a routerLink="./" class="">Tuition &amp; Fees</a></li>
+            <li><a routerLink="./" class="">Scholarships</a></li>
+            <li><a routerLink="./" class="">Academic Calendar</a></li>
           </ul>
         </div>
         <!--Grid column-->
@@ -57,21 +35,11 @@
         <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
           <h5 class="text-uppercase">Sociala</h5>
           <ul class="list-unstyled mb-0">
-            <li>
-              <a routerLink="./" class="">Facebook</a>
-            </li>
-            <li>
-              <a routerLink="./" class="">Twitter</a>
-            </li>
-            <li>
-              <a routerLink="./" class="">YouTube</a>
-            </li>
-            <li>
-              <a routerLink="./" class="">Instagram</a>
-            </li>
-          </li>
-          <a routerLink="./" class="">LinkedIn</a>
-        </li>
+            <li><a routerLink="./" class="">Facebook</a></li>
+            <li><a routerLink="./" class="">Twitter</a></li>
+            <li><a routerLink="./" class="">YouTube</a></li>
+            <li><a routerLink="./" class="">Instagram</a></li>
+            <li><a routerLink="./" class="">LinkedIn</a></li>
           </ul>
         </div>
         <!--Grid column-->
