--- a/src/themes/dspace/app/footer/footer.component.html
+++ b/src/themes/dspace/app/footer/footer.component.html
@@ -55,14 +55,14 @@
       <p class="m-0">
         <a class="text-white"
            href="http://www.dspace.org/">{{ 'footer.link.dspace' }}</a>
-        {{ 'footer.copyright' | translate:{year: dateObj | date:'y'} }}
+        {{ 'footer.copyright' {year: dateObj | date:'y'} }}
         <a class="text-white"
            href="https://www.lyrasis.org/">{{ 'footer.link.lyrasis' }}</a>
       </p>
       <ul class="footer-info list-unstyled d-flex justify-content-center mb-0">
         <li>
           <button class="btn btn-link text-white" type="button" (click)="showCookieSettings()">
-            {{ 'footer.link.cookies' | translate}}
+            {{ 'footer.link.cookies' }}
           </button>
         </li>
         <li *ngIf="showPrivacyPolicy">
