--- a/src/themes/dspace/app/footer/footer.component.html
+++ b/src/themes/dspace/app/footer/footer.component.html
@@ -9,11 +9,11 @@
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
           <h5 class="text-uppercase">Navigation</h5>
           <ul class="list-unstyled mb-0">
-            <li><a routerLink="./" class="">USL Overview</a></li>
-            <li><a routerLink="./" class="">Our Values</a></li>
-            <li> <a routerLink="./" class="">Governance</a></li>
-            <li><a routerLink="./" class="">Campus Locations</a></li>
-            <li><a routerLink="./" class="">Partners</a></li>
+            <li><a href="/" class="">USL Overview</a></li>
+            <li><a href="/" class="">Our Values</a></li>
+            <li> <a href="/" class="">Governance</a></li>
+            <li><a href="/" class="">Campus Locations</a></li>
+            <li><a href="/" class="">Partners</a></li>
           </ul>
         </div>
         <!--Grid column-->
@@ -22,24 +22,24 @@
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
           <h5 class="text-uppercase">Academics</h5>
           <ul class="list-unstyled mb-0">
-            <li><a routerLink="./" class="">Short Courses</a></li>
-            <li><a routerLink="./" class="">USL Prospectus</a></li>
-            <li><a routerLink="./" class="">Tuition &amp; Fees</a></li>
-            <li><a routerLink="./" class="">Scholarships</a></li>
-            <li><a routerLink="./" class="">Academic Calendar</a></li>
+            <li><a href="/" class="">Short Courses</a></li>
+            <li><a href="/" class="">USL Prospectus</a></li>
+            <li><a href="/" class="">Tuition &amp; Fees</a></li>
+            <li><a href="/" class="">Scholarships</a></li>
+            <li><a href="/" class="">Academic Calendar</a></li>
           </ul>
         </div>
         <!--Grid column-->
 
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Sociala</h5>
+          <h5 class="text-uppercase">Social</h5>
           <ul class="list-unstyled mb-0">
-            <li><a routerLink="./" class="">Facebook</a></li>
-            <li><a routerLink="./" class="">Twitter</a></li>
-            <li><a routerLink="./" class="">YouTube</a></li>
-            <li><a routerLink="./" class="">Instagram</a></li>
-            <li><a routerLink="./" class="">LinkedIn</a></li>
+            <li><a href="/" class="">Facebook</a></li>
+            <li><a href="/" class="">Twitter</a></li>
+            <li><a href="/" class="">YouTube</a></li>
+            <li><a href="/" class="">Instagram</a></li>
+            <li><a href="/" class="">LinkedIn</a></li>
           </ul>
         </div>
         <!--Grid column-->
@@ -65,21 +65,18 @@
           </button>
         </li>
         <li>
-          <a class="btn text-white"
-             routerLink="info/privacy">Privacy Policy</a>
+          <a class="btn text-white" href="info/privacy">Privacy Policy</a>
         </li>
         <li>
-          <a class="btn text-white"
-             routerLink="info/end-user-agreement">User Agreement</a>
+          <a class="btn text-white" href="info/end-user-agreement">User Agreement</a>
         </li>
         <li>
-          <a class="btn text-white"
-             routerLink="info/feedback">User Feedback</a>
+          <a class="btn text-white" href="info/feedback">User Feedback</a>
         </li>
       </ul>
     </div>
     <div class="notify-enabled text-white">
-      <a class="coar-notify-support-route" routerLink="info/coar-notify-support">
+      <a class="coar-notify-support-route" href="info/coar-notify-support">
         <img class="n-coar" src="assets/images/n-coar.svg" [attr.alt]="'menu.header.image.logo'" />
         Notify Support
       </a>
